<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--
        Conjunto de destinos posibles de la navegación inferior. MainActivity limpia
        el menú y agrega solo las opciones permitidas para cada rol. Los IDs deben
        coincidir con los destinos del grafo de navegación.

         IMPORTANTE: BottomNavigationView admite como máximo 6 elementos al crearse,
         por eso este conjunto está limitado a 6.
    -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cajero_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/cajero_title" />
        <item
            android:id="@+id/nav_cocina_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/cocina_title" />
        <item
            android:id="@+id/nav_repartidor_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/repartidor_title" />
        <item
            android:id="@+id/nav_pedido_list"
            android:icon="@drawable/ic_pedidos_24dp"
            android:title="@string/all_orders" />
        <item
            android:id="@+id/nav_cajero_productos"
            android:icon="@drawable/ic_productos_24dp"
            android:title="@string/go_to_products" />
        <item
            android:id="@+id/nav_caja"
            android:icon="@drawable/ic_caja_24dp"
            android:title="@string/caja_title" />
    </group>
</menu>
